syntax = "proto3";
package inventory;

option go_package = "./proto/gen;gen";

import "google/protobuf/empty.proto";

service InventoryService {
  // Product management
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc GetProduct (ProductIDRequest) returns (ProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct (ProductIDRequest) returns (google.protobuf.Empty);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
  
  // Stock management
  rpc CheckStock (StockCheckRequest) returns (StockCheckResponse);
}

// Product messages
message CreateProductRequest {
  string name = 1;
  float price = 2;
  string category = 3;
  int32 stock = 4;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  float price = 3;
  string category = 4;
  int32 stock = 5;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  float price = 3;
  string category = 4;
  int32 stock = 5;
}

message ProductIDRequest {
  string id = 1;
}

// Listing and filtering
message ListProductsRequest {
  map<string, string> filter = 1; // key-value pairs for filtering
}

message ListProductsResponse {
  repeated ProductResponse products = 1;
}

// Stock management
message StockCheckRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message StockCheckResponse {
  bool is_available = 1;
  int32 current_stock = 2;
}